using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class player : MonoBehaviour
{
    public GameObject playerProjectilePrefab; // ç©å®¶æŠ•å°„ç‰©é¢„åˆ¶ä½“å¼•ç”¨
    public GameObject playerProjectileAI; // ç©å®¶æŠ•å°„ç‰©ç”Ÿæˆç‚¹
    public GameObject playerHenshinEffect;
    [Header("ç»„ä»¶å¼•ç”¨")]
    private PlayerHitboxManager hitboxManager; // ğŸŸ¢ æ–°å¢ï¼šåªéœ€è¦è¿™ä¸€ä¸ªå¼•ç”¨
    public AnimEvent animEvent;
    //[Header("henshin")]
    //public GameObject henshinTrigger;// => GameObject.Find("Henshin");
    [Header("åœ°é¢æ£€æµ‹")]
    public Transform groundCheck;
    public float groundCheckRange = 0.2f;
    public LayerMask groundLayer;
    [Header("ç²’å­")]
    public GameObject bloodEffect;

    public static player Instance{get; private set;}
    public Animator anim{get; private set;}
    public Rigidbody2D rb{get; private set;}
    public playerStateMachine stateMachine{get; private set;}
    public playerIdleState idleState{get; private set;}
    public playerMoveState moveState{get; private set;}
    public playerJumpState jumpState{get; private set;}
    public playerAirState airState{get; private set;}
    public playerNormalATK normalATKState{get; private set;}
    public playerTransformState transformState{get; private set;} // æ–°å¢å½¢æ€åˆ‡æ¢çŠ¶æ€
    public playerDieState dieState{get; private set;}
    public playerBeenATKState beenATKState{get; private set;}
    public playerNormalATK2 normalATK2{get; private set;}


    private void Awake()
    {
        hitboxManager = GetComponent<PlayerHitboxManager>(); // è·å–æ”»å‡»åˆ¤å®šæ¡†ç®¡ç†å™¨ç»„ä»¶
        anim = GetComponentInChildren<Animator>();
        rb = GetComponent<Rigidbody2D>();
        animEvent = GetComponentInChildren<AnimEvent>();
        //henshinTrigger = GameObject.Find("Henshin");
        stateMachine = new playerStateMachine();
        idleState = new playerIdleState(this, stateMachine, "idle");
        moveState = new playerMoveState(this, stateMachine, "move");
        jumpState = new playerJumpState(this, stateMachine, "jump");
        airState  = new playerAirState (this, stateMachine, "jump");
        normalATKState = new playerNormalATK(this, stateMachine, "normalATK");
        transformState = new playerTransformState(this, stateMachine, "transform"); // åˆå§‹åŒ–å½¢æ€åˆ‡æ¢çŠ¶æ€
        dieState = new playerDieState(this, stateMachine, "die");
        beenATKState = new playerBeenATKState(this, stateMachine, "beATK");
        normalATK2 = new playerNormalATK2(this, stateMachine, "normalATK2");
        // if(Instance == null)
        //     Instance = this;
        // else
        //     Destroy(gameObject);

    }
    protected void Start() 
    {
        stateMachine.Initialize(idleState);         //è¿™ä¸ªå‡½æ•°åœ¨playerStateMachineé‡Œé¢æœ‰å†™ï¼Œæ˜¯åˆå§‹åŒ–ç¬¬ä¸€ä¸ªçŠ¶æ€çš„

        //henshinTrigger.SetActive(false);

        // é‡ç½®æ‰€æœ‰åŠ¨ç”»äº‹ä»¶æ ‡å¿—
        animEvent.ResetAnimationEvent();
        animEvent.DisableHitbox();
    }
    protected void Update() 
    {
        stateMachine.currentState.Update();
        Debug.Log($"å½“å‰çŠ¶æ€ï¼š{stateMachine.currentState}");
        playerStateManager.Update(); // æ›´æ–°å½¢æ€ç®¡ç†å™¨
        if(playerStateManager.isDead && stateMachine.currentState != dieState)
        {
            stateMachine.ChangeState(dieState);
        }
        if (playerStateManager.isBeHit)
        {
            if(playerStateManager.playerHP > 0 && stateMachine.currentState != beenATKState)
            {
                Instantiate(bloodEffect, transform.position, Quaternion.identity);
                stateMachine.ChangeState(beenATKState);
            }
            else if(playerStateManager.playerHP <= 0 && stateMachine.currentState != dieState)
            {
                stateMachine.ChangeState(dieState);
            }   
        }
    }

    #region å—ä¼¤æ¥å£(å·²æ³¨é‡Š)
    // //.................................................................................æ¥å£
    // //ç©å®¶å—ä¼¤
    // public void TakeDamage(float amount)
    // {
    //     // è¿™é‡Œçš„ä»£ç å°±æ˜¯æˆ‘ä»¬ä¹‹å‰è®¨è®ºçš„ï¼š
    //     // 1. æ‰£è¡€
    //     // 2. åˆ¤æ–­æ­»äº¡
    //     // 3. æ’­æ”¾åŠ¨ç”»
        
    //     playerStateManager.playerHP -= amount;

    //     if (playerStateManager.isDead)
    //     {
    //         stateMachine.ChangeState(dieState);
    //     }
    //     else
    //     {
    //         stateMachine.ChangeState(beenATKState);
    //     }
    //     Debug.Log($"Player took {amount} damage.");
    // }
    #endregion

    public void SetVelocity(float xVelocity, float yVelocity)
    {
        rb.velocity = new Vector2(xVelocity, yVelocity);
        FilpController(xVelocity);
    }
    #region ç¿»è½¬è§’è‰²ç›¸å…³å‚æ•°å’Œå‡½æ•°
    public bool isFacingRight = false;
    private int playerDirection = -1;
    public void Flip()
    {
        playerDirection *= -1;
        isFacingRight = !isFacingRight;
        transform.Rotate(0f, 180f, 0f);
    }


    // åœ¨ player.cs ä¸­æ·»åŠ è¿™ä¸ªå…¬å…±æ–¹æ³•
public void OnAttackHit(IDamageable target, Collider2D hitInfo)
{
    // æŠŠæ¶ˆæ¯è½¬å‘ç»™å½“å‰çŠ¶æ€
    // è¿™æ ·ï¼Œå¦‚æœå½“å‰æ˜¯â€œæ™®æ”»çŠ¶æ€â€ï¼Œå°±ä¼šè§¦å‘æ™®æ”»çš„é€»è¾‘
    //ç”¨ä½œä¼¤å®³è®¡ç®—å’Œç‰¹æ•ˆæ’­æ”¾
    stateMachine.currentState.OnAttackHit(target, hitInfo);
}
    public void FilpController(float x)
    {
        if(x > 0 && !isFacingRight) Flip();
        else if(x < 0 && isFacingRight) Flip();
    }
    #endregion
    #region åœ°é¢æ£€æµ‹
    /// <summary>
    /// æ£€æµ‹æ˜¯å¦åœ¨åœ°é¢ä¸Š
    /// </summary>
    public bool IsGroundDetected() => Physics2D.OverlapCircle(groundCheck.position, groundCheckRange, groundLayer);

    // å¯è§†åŒ–æ£€æµ‹èŒƒå›´ï¼ˆä»…åœ¨ç¼–è¾‘å™¨ä¸­æ˜¾ç¤ºï¼‰
    private void OnDrawGizmos()
    {
        if (groundCheck != null)
        {
            Gizmos.color = Color.red;
            Gizmos.DrawWireSphere(groundCheck.position, groundCheckRange);
        }
    }
    #endregion


    //public void MakeHenshinTriggerDisActive() => henshinTrigger.SetActive(false);
}